--- a/src/ngsw-config.json
+++ b/src/ngsw-config.json
@@ -1,9 +1,12 @@
 {
   "index": "/index.html",
+  "version": 1,
+
   "assetGroups": [
     {
       "name": "app",
       "installMode": "prefetch",
+
       "resources": {
         "files": [
           "/favicon.ico",
@@ -12,10 +15,13 @@
           "/*.js"
         ]
       }
-    }, {
+    }, 
+    
+    {
       "name": "assets",
       "installMode": "lazy",
       "updateMode": "prefetch",
+
       "resources": {
         "files": [
           "/assets/**",
